# data_explorer

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data_explorer/: __init__.py  __main__.py  cli.py
samples/: sales_data_dictionary.md  sales_dim_customers.csv  sales_dim_products.csv  sales_fact_transactions_10k.csv
src/: __init__.py  answer_format_utils.py  cache_utils.py  compute_engine.py  config.py  data_utils.py  llm_clients.py  logging_utils.py  qa_engine.py  vector_store.py
tests/: __init__.py  test_answer_format_utils.py  test_cache_utils.py  test_compute_engine.py  test_data_utils.py  test_logging_utils.py  test_qa_engine.py  test_vector_store.py
