[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-explorer-qa"
version = "0.1.0"
description = "Streamlit dataset explorer with hybrid compute and RAG Q&A."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "streamlit>=1.42.0",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "chromadb>=0.5.18",
  "scikit-learn>=1.5.2",
  "numpy>=1.26.4",
  "requests>=2.32.3",
  "python-dotenv>=1.0.1",
  "openai>=1.61.0",
  "openpyxl>=3.1.5",
  "pyarrow>=17.0.0",
  "duckdb>=1.1.3",
  "jinja2>=3.1.4"
]

[project.scripts]
data-explorer = "data_explorer.cli:main"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "data_explorer*", "tests*"]
